# TurboParser

./: .editorconfig  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  index.html  install-ubuntu.sh  install_deps-osx.sh  install_deps.sh
libturboparser/: Makefile  TurboParserInterface.cpp  TurboParserInterface.h
python/: README  install_wrapper.sh  lemmatizer.py  nlp_document.py  nlp_pipeline.config  nlp_pipeline.py  nlp_pipeline.win.config  nlp_sentence.py  nlp_utils.py  setup.py  span.py  test.py  turbo_parser.pyx  turboparser.pyx
src/constituency_labeler/: ConstituencyDictionary.cpp  ConstituencyDictionary.h  ConstituencyInstance.cpp  ConstituencyInstance.h  ConstituencyInstanceNumeric.cpp  ConstituencyInstanceNumeric.h  ConstituencyLabelerDecoder.cpp  ConstituencyLabelerDecoder.h  ConstituencyLabelerDictionary.cpp  ConstituencyLabelerDictionary.h  ConstituencyLabelerFeatureTemplates.h  ConstituencyLabelerFeatures.cpp  ConstituencyLabelerFeatures.h  ConstituencyLabelerInstance.cpp  ConstituencyLabelerInstance.h  ConstituencyLabelerInstanceNumeric.cpp  ConstituencyLabelerInstanceNumeric.h  ConstituencyLabelerOptions.cpp  ConstituencyLabelerOptions.h  ConstituencyLabelerPart.cpp  ConstituencyLabelerPart.h  ConstituencyLabelerPipe.cpp  ConstituencyLabelerPipe.h  ConstituencyLabelerReader.cpp  ConstituencyLabelerReader.h  ConstituencyLabelerWriter.cpp  ConstituencyLabelerWriter.h  ConstituencyReader.cpp  ConstituencyReader.h  ConstituencyWriter.cpp  ConstituencyWriter.h  Makefile.am  Makefile.in  ParseTree.cpp  ParseTree.h  TurboConstituencyLabeler.cpp
src/coreference_resolver/: CoreferenceDecoder.cpp  CoreferenceDecoder.h  CoreferenceDeterminer.h  CoreferenceDictionary.cpp  CoreferenceDictionary.h  CoreferenceDocument.cpp  CoreferenceDocument.h  CoreferenceDocumentNumeric.cpp  CoreferenceDocumentNumeric.h  CoreferenceFeatureTemplates.h  CoreferenceFeatures.cpp  CoreferenceFeatures.h  CoreferenceOptions.cpp  CoreferenceOptions.h  CoreferencePart.cpp  CoreferencePart.h  CoreferencePipe.cpp  CoreferencePipe.h  CoreferencePronoun.h  CoreferenceReader.cpp  CoreferenceReader.h  CoreferenceSentence.cpp  CoreferenceSentence.h  CoreferenceSentenceNumeric.cpp  CoreferenceSentenceNumeric.h  CoreferenceWriter.cpp  CoreferenceWriter.h  Makefile.am  Makefile.in  Mention.cpp  Mention.h  TurboCoreferenceResolver.cpp
src/dependency_labeler/: DependencyLabelerDecoder.cpp  DependencyLabelerDecoder.h  DependencyLabelerFeatureTemplates.h  DependencyLabelerFeatures.cpp  DependencyLabelerFeatures.h  DependencyLabelerOptions.cpp  DependencyLabelerOptions.h  DependencyLabelerPart.cpp  DependencyLabelerPart.h  DependencyLabelerPipe.cpp  DependencyLabelerPipe.h  Makefile.am  Makefile.in  TurboDependencyLabeler.cpp
src/entity_recognizer/: EntityDecoder.cpp  EntityDecoder.h  EntityDictionary.cpp  EntityDictionary.h  EntityFeatureTemplates.h  EntityFeatures.cpp  EntityFeatures.h  EntityInstance.cpp  EntityInstance.h  EntityInstanceNumeric.cpp  EntityInstanceNumeric.h  EntityOptions.cpp  EntityOptions.h  EntityPipe.cpp  EntityPipe.h  EntityReader.cpp  EntityReader.h  EntitySpan.h  EntityWriter.cpp  EntityWriter.h  Makefile.am  Makefile.in  TurboEntityRecognizer.cpp
src/morphological_tagger/: Makefile.am  Makefile.in  MorphDictionary.cpp  MorphDictionary.h  MorphFeatureTemplates.h  MorphFeatures.cpp  MorphFeatures.h  MorphInstance.cpp  MorphInstance.h  MorphInstanceNumeric.cpp  MorphInstanceNumeric.h  MorphOptions.cpp  MorphOptions.h  MorphPipe.cpp  MorphPipe.h  MorphReader.cpp  MorphReader.h  MorphWriter.cpp  MorphWriter.h  MorphologicalDictionary.cpp  MorphologicalDictionary.h  MorphologicalFeatureTemplates.h  MorphologicalFeatures.cpp  MorphologicalFeatures.h  MorphologicalInstance.cpp  MorphologicalInstance.h  MorphologicalInstanceNumeric.cpp  MorphologicalInstanceNumeric.h  MorphologicalOptions.cpp  MorphologicalOptions.h  MorphologicalPipe.cpp  MorphologicalPipe.h  MorphologicalReader.cpp  MorphologicalReader.h  MorphologicalWriter.cpp  MorphologicalWriter.h  TurboMorphologicalTagger.cpp
src/parser/: DependencyDecoder.cpp  DependencyDecoder.h  DependencyDictionary.cpp  DependencyDictionary.h  DependencyFeatureTemplates.h  DependencyFeatures.cpp  DependencyFeatures.h  DependencyInstance.cpp  DependencyInstance.h  DependencyInstanceNumeric.cpp  DependencyInstanceNumeric.h  DependencyOptions.cpp  DependencyOptions.h  DependencyPart.cpp  DependencyPart.h  DependencyPipe.cpp  DependencyPipe.h  DependencyReader.cpp  DependencyReader.h  DependencyWriter.cpp  DependencyWriter.h  FactorGrandparentHeadAutomaton.h  FactorHeadAutomaton.h  FactorSequence.h  FactorTree.h  FactorTrigramHeadAutomaton.h  Makefile.am  Makefile.in  TurboParser.cpp
src/semantic_parser/: FactorArgumentAutomaton.h  FactorPredicateAutomaton.h  FactorSemanticGraph.h  Makefile.am  Makefile.in  SemanticDecoder.cpp  SemanticDecoder.h  SemanticDictionary.cpp  SemanticDictionary.h  SemanticFeatureTemplates.h  SemanticFeatures.cpp  SemanticFeatures.h  SemanticInstance.cpp  SemanticInstance.h  SemanticInstanceNumeric.cpp  SemanticInstanceNumeric.h  SemanticOptions.cpp  SemanticOptions.h  SemanticPart.cpp  SemanticPart.h  SemanticPipe.cpp  SemanticPipe.h  SemanticPredicate.h  SemanticReader.cpp  SemanticReader.h  SemanticWriter.cpp  SemanticWriter.h  TurboSemanticParser.cpp
src/tagger/: Makefile.am  Makefile.in  SequenceDecoder.cpp  SequenceDecoder.h  SequenceDictionary.cpp  SequenceDictionary.h  SequenceFeatureTemplates.h  SequenceFeatures.cpp  SequenceFeatures.h  SequenceInstance.cpp  SequenceInstance.h  SequenceInstanceNumeric.cpp  SequenceInstanceNumeric.h  SequenceOptions.cpp  SequenceOptions.h  SequencePart.cpp  SequencePart.h  SequencePipe.cpp  SequencePipe.h  SequenceReader.cpp  SequenceReader.h  SequenceWriter.cpp  SequenceWriter.h  TaggerDictionary.cpp  TaggerDictionary.h  TaggerFeatureTemplates.h  TaggerFeatures.cpp  TaggerFeatures.h  TaggerOptions.cpp  TaggerOptions.h  TaggerPipe.cpp  TaggerPipe.h  TokenDictionary.cpp  TokenDictionary.h  TurboTagger.cpp
(+192 files in other folders)
