SUBDIRS=src/tagger src/parser
EXTRA_DIST=scripts/create_conll_corpus_from_text.pl \
scripts/create_conll_predicted_tags_corpus.pl \
scripts/create_conll_predicted_tags_corpus.sh \
scripts/create_tagging_corpus.sh \
scripts/eval.pl \
scripts/eval_predpos.pl \
scripts/parse.sh \
scripts/run_parser.sh \
scripts/run_tagger.sh \
scripts/train_test_parser.sh \
scripts/train_test_tagger.sh \
data/sample/sample_train.conll \
data/sample/sample_test.conll \
install_deps.sh \
models \
deps/ad3_v2.tar.gz \
deps/gflags-2.0-no-svn-files.tar.gz \
deps/glog-0.3.2.tar.gz

